fix some bugs with textarea overflow

--- a/public_html/static/css/base.css
+++ b/public_html/static/css/base.css
@@ -1,18 +1,9 @@
 body {
   margin: 0;
   padding: 0;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
   overflow: hidden;
   font-family: 'Inter', sans-serif;
 }
-
-div {
-  display: block;
-}
-
 
 #content {
   display: grid;
@@ -52,6 +43,8 @@ div {
 textarea {
   resize: none;
   position: relative;
+  padding: 0;
+  margin: 0;
   width: 100%;
   height: 100%;
   border: none;
